wrapped up mobile; position fixed

--- a/tenure-navbar/main.css
+++ b/tenure-navbar/main.css
@@ -2,8 +2,22 @@ body {
     margin: 0;
 }
 
+#nav-container {
+    position: fixed;
+    width: 100%;
+}
+
 #expand-btn {
     display: none;
+
+    /* remove default button styles */
+    background: none;
+	  color: inherit;
+	  border: none;
+	  padding: 0;
+	  font: inherit;
+	  cursor: pointer;
+	  outline: inherit;
 }
 
 #navbar {
@@ -14,6 +28,7 @@ body {
     display: flex;
     align-items: center;
     padding: 0 17px;
+
 }
 
 #navbar > a#logo {
@@ -96,7 +111,8 @@ body {
 /* Second foldpoint, when headers wrap to 3 lines */
 @media (max-width: 895px) {
     #navbar {
-        height: 52px;
+        overflow-y: hidden;
+        max-height: 52px;
         flex-direction: column;
         justify-content: flex-start;
     }
@@ -107,7 +123,15 @@ body {
     }
 
     #navbar > div {
-        min-height: 52px;
+        min-height: 42px;
+        height: 42px;
+    }
+
+    #navbar > div#takeaways {
+        margin-bottom: 17px;
+    }
+    #navbar > div#takeaways > a {
+        text-align: center;
     }
 
     #expand-btn {
@@ -132,6 +156,58 @@ body {
         fill: #444;
     }
 }
+
+#expand-btn, #navbar {
+    animation-duration: .3s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes rotateDown {
+    from { transform: rotate(180deg); }
+    to { transform: rotate(0deg); }
+}
+
+@keyframes rotateUp {
+    from { transform: rotate(0deg); }
+    to { transform: rotate(180deg); }
+}
+
+.rotate-down {
+    animation-name: rotateDown;
+}
+
+.rotate-up {
+    animation-name: rotateUp;
+}
+
+@keyframes rollUp {
+    from { max-height: 312px; }
+    to { max-height: 52px; }
+}
+
+@keyframes rollDown {
+    from { max-height: 52px; }
+    to { max-height: 312px; }
+}
+
+.roll-up {
+    animation-name: rollUp;
+}
+
+.roll-down {
+    animation-name: rollDown;
+}
+
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+}
+
 
 
 
